Summary: | ASTERISK-26141: res_fax: fax_v21_session_new leaks reference to v21_details | ||
Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
Date Opened: | 2016-06-22 15:04:49 | Date Closed: | 2016-06-22 21:52:01 |
Priority: | Minor | Regression? | |
Status: | Closed/Complete | Components: | Resources/res_fax |
Versions: | SVN 11.21.2 13.9.1 | Frequency of Occurrence | |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | fax_session_new does not 'eat' the reference to details, so caller is responsible for cleanup. I have not traced out other callers of fax_session_new but this was the only reference leak exposed by testsuite/tests/sip/. | ||
Comments: | By: Asterisk Team (asteriskteam) 2016-06-22 15:04:50.553-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. |