Update to Asterisk 11.23.0: this is a bug fix release.

The Asterisk Development Team has announced the release of Asterisk 11.23.0.

The release of Asterisk 11.23.0 resolves several issues reported by the
community and would have not been possible without your participation.
Thank you!

The following are the issues resolved in this release:

Bugs fixed in this release:
-----------------------------------
 * ASTERISK-26141 - res_fax: fax_v21_session_new leaks reference to
      v21_details (Reported by Corey Farrell)
 * ASTERISK-26140 - res_rtp_asterisk: gcc 6 caught a
      self-comparison (Reported by George Joseph)
 * ASTERISK-26138 - chan_unistim:  Under FreeBSD, chan_unistim
      generates a compile error (Reported by George Joseph)
 * ASTERISK-26130 - [patch] WebRTC: Should use latest DTLS version.
      (Reported by Alexander Traud)
 * ASTERISK-26126 - [patch] leverage 'bindaddr' for TLS in
      http.conf (Reported by Alexander Traud)
 * ASTERISK-26069 - Asterisk truncates To: header, dropping the
      closing '>' (Reported by Vasil Kolev)
 * ASTERISK-26097 - [patch] CLI: show maximum file descriptors
      (Reported by Alexander Traud)
 * ASTERISK-24436 - Missing header in res/res_srtp.c when compiling
      against libsrtp-1.5.0 (Reported by Patrick Laimbock)
 * ASTERISK-26091 - [patch] ar cru creates warning, instead use ar
      cr (Reported by Alexander Traud)
 * ASTERISK-26038 - 'make install' doesn't seem to install OS/X
      init files (Reported by Tzafrir Cohen)
 * ASTERISK-26034 - T.38 passthrough problem behind firewall due to
      early nosignal packet (Reported by George Joseph)
 * ASTERISK-26030 - call cut because of double Session-Expires
      header in re-invite after proxy authentication is required
      (Reported by George Joseph)
 * ASTERISK-26008 - app_followme does not delete recorded name
      prompt (Reported by Tzafrir Cohen)
 * ASTERISK-24463 - Voicemail email address corrupt or not sent
      when message is in the process of being recorded during reload
      (Reported by John Campbell)
 * ASTERISK-25917 - [patch]app_voicemail: passwordlocation=spooldir
      only works if you manually add secret.conf yourself (Reported by
      Jonathan R. Rose)
 * ASTERISK-25954 - Manager QueueSummary and QueueStatus Actions
      are case sensitive to QueueName (Reported by Javier Acosta)
 * ASTERISK-16115 - [patch] problem with ringinuse=no, queue
      members receive sometimes two calls (Reported by nik600)
 * ASTERISK-25934 - chan_sip should not require sipregs or
      updateable sippeers table unless rt (Reported by Jaco Kroon)
 * ASTERISK-25888 - Frequent segfaults in function can_ring_entry()
      of app_queue.c (Reported by Sébastien Couture)
 * ASTERISK-25874 - app_voicemail: Stack buffer overflow in
      test_voicemail_notify_endl (Reported by Badalian Vyacheslav)
 * ASTERISK-25912 - chan_local passes AST_CONTROL_PVT_CAUSE_CODE
      without adding them to the local hangupcauses via
      ast_channel_hangupcause_hash_set (Reported by Jaco Kroon)
 * ASTERISK-25407 - Asterisk fails to log to multiple syslog
      destinations (Reported by Elazar Broad)
 * ASTERISK-25510 - [patch]Log to syslog failing (Reported by
      Michael Newton)

Improvements made in this release:
-----------------------------------
 * ASTERISK-25444 - [patch]Music On Hold Warning misleading
      (Reported by Conrad de Wet)

For a full list of changes in this release, please see the ChangeLog:

http://downloads.asterisk.org/pub/telephony/asterisk/ChangeLog-11.23.0

Thank you for your continued support of Asterisk!